kubernetes/infrastructure/networking/cilium/gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${CILIUM_GATEWAY_EXTERNAL_NAME}
  namespace: kube-system
  labels:
    app.kubernetes.io/name: ${CILIUM_GATEWAY_EXTERNAL_NAME}
    app.kubernetes.io/component: ingress
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: ${CILIUM_GATEWAY_LB_IP_EXTERNAL}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
            namespace: kube-system
